# loristrck

./: .cirrus.yml  .gitignore  LICENSE  MANIFEST  MANIFEST.in  README.rst  generatedocs.py  inside-docker.sh  mkdocs.yml  pyproject.toml  readthedocs.yml  requirements.txt  setup.py
.github/workflows/: linuxwheels.yml  osx.yml  python-builder.yml  test.yml  wheels.yml
docs/: commandline.md  generatedocs.py  index.md  installation.md  reference.md  util.md
loristrck/: __init__.py  __init__.pyi  _core.pyi  _core.pyx  common.py  lorisdefs.pxd  play.py  plot.py  util.py
loristrck/data/: README.txt
scripts/: prepare_windows_build.py  windows-build-wheely.py
src/loris/: ChangeLog  Makefile  Makefile.in  config.h  config.h.in  configure.ac  libtool  reconf
src/loris/csound/: Makefile.am  lorisgens4.h  lorisgens5.C  tryit.csd
src/loris/demo/source/: cello.source.aiff
src/loris/doc/: Doxyfile  Makefile  Makefile.in
src/loris/doc/html/search/: all_1.js  all_10.js  all_2.js  all_3.js  all_5.js  all_6.js  all_7.js  all_8.js  all_a.js  all_f.js  classes_0.js  classes_2.js  classes_3.js  classes_7.js  classes_9.js  classes_c.js  classes_d.js  classes_f.js  enumvalues_0.js  functions_0.js  functions_1.js  functions_10.js  functions_13.js  functions_2.js  functions_4.js  functions_6.js  functions_7.js  functions_8.js  related_0.js  typedefs_3.js  typedefs_4.js  typedefs_5.js  typedefs_6.js  typedefs_7.js  variables_0.js  variables_2.js  variables_4.js
src/loris/scripting/: Makefile.am  loris.i  lorisChannelizer.i  lorisFundamental.i  lorisMorph.i  lorisPartialList.i
src/loris/src/: AiffData.cpp  AiffData.h  AiffFile.h  Analyzer.cpp  Analyzer.h  AssociateBandwidth.cpp  BigEndian.C  BigEndian.h  Breakpoint.cpp  BreakpointEnvelope.h  BreakpointUtils.C  BreakpointUtils.h  Channelizer.h  Collator.cpp  Collator.h  Dilator.cpp  Dilator.h  Distiller.cpp  Distiller.h  Envelope.cpp  Envelope.h  Exception.h  F0Estimate.C  F0Estimate.h  Filter.cpp  Filter.h  FourierTransform.h  FrequencyReference.C  FrequencyReference.h  Fundamental.cpp  Harmonifier.C  KaiserWindow.cpp  LinearEnvelope.cpp  LinearEnvelope.h  LorisExceptions.h  Makefile  Makefile.am  Makefile.in  NoiseGenerator.cpp  Notifier.cpp  (+24 more)
src/loris/test/: Makefile  morphtest.C  test_Aiff.C  test_Distiller.C  test_Filter.C  test_Fundamental.C  test_Identity.C  test_Morpher.C  test_Resampler.C  test_SdifFile.C
src/loris/utils/: Makefile  loris_analyze.C  loris_dilate.C  loris_mark.C
src/loris/win/: README  loris.h
src/loris18/doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  enumvalues_0.js  functions_0.js  (+36 more)
src/loris_/: Makefile.am  README  config.status  configure
src/loris_/csound/: Makefile  Makefile.in  lorisgens4.C  lorisgens5.h
src/loris_/demo/: Makefile  README  morphdemo.py
src/loris_/doc/: Makefile.am
src/loris_/doc/html/search/: all_0.js  all_11.js  all_12.js  all_13.js  all_4.js  all_9.js  all_b.js  all_c.js  all_d.js  classes_1.js  classes_10.js  classes_4.js  classes_5.js  classes_6.js  classes_a.js  classes_b.js  classes_e.js  functions_11.js  functions_3.js  functions_5.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  functions_d.js  functions_e.js  functions_f.js  searchdata.js  typedefs_0.js  typedefs_1.js  typedefs_2.js  typedefs_8.js  variables_1.js  variables_3.js
src/loris_/scripting/: Makefile  Makefile.in  lorisAnalyzer.i  lorisEnvelope.i  lorisFileIO.i  lorisPartialListOps.i  lorisSynthesizer.i  lorisdoc.py
src/loris_/src/: AiffFile.C  AssociateBandwidth.h  Breakpoint.h  Channelizer.C  Filter.h  FourierTransform.C  Fundamental.h  Harmonifier.h  ImportLemur.C  ImportLemur.h  KaiserWindow.h  LorisExceptions.C  Marker.C  Marker.h  Morpher.C  Morpher.h  NoiseGenerator.h  Notifier.h  Oscillator.C  Partial.C  PartialBuilder.h  PartialList.C  PartialPtrs.h  PartialUtils.h  SdifFile.C  SdifFile.h  SpcFile.h  SpectralSurface.C  SpectralSurface.h  loris.h.in  lorisBpEnvelope_pi.C  lorisException_pi.C  lorisPartialList_pi.C  phasefix.h
src/loris_/test/: Makefile.am  Makefile.in  morphtest.py  morphtest.tcl  pitest.c  test_Cropper.C  test_Partial.C  test_Synthesizer.C
src/loris_/utils/: Makefile.am  Makefile.in  loris_spewmarkers.C  loris_synthesize.C  loris_unmark.C
test/: .test-stretch.py.kate-swp  requirements.txt  test-analysis.py  test-fade.py  test-stretch.py
test/sound/: finneganswake-fragm01-1.flac  musicbox-tchaikovsky-44k1-1.flac  tuning-fork--A4.mtx  tuning-fork--A4.sdif  tuningfork.sdif
